0027136: Visualization - skip void bounding box within SelectMgr_SelectableObjectTrsfPersSet::BVH()